# prospector-btc

./: .dockerignore  .gitignore  .npmrc  .nxignore  .prettierignore  Cargo.toml  README.md  docker-compose.yml  eslint.config.mjs  jest.preset.js  nx.json  package.json  package.json.md  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  vercel.json
.docs/: BITACORA_PROYECTO.md  CODEX-PROMETHEUS.md  CODEX-PROSPECTOR..md  MANIFIESTO-CERTIFICACION-CRIPTOGRAFICA.md  MANIFIESTO-EXPANSION .md  MANIFIESTO_SCRIPTS.md  PLAN_MAESTRO_IMPLEMENTACION_V3.md  PROTOCOLO-ARQUEOLOGIA-ENTROPIA.md  PROTOCOLO-TRINIDAD.md  PROYECTO-PANOPTICO.md  PROYECTO-PROVING-GROUNDS.md  README_OPS.md  _CERO-REGRESIONES.md  _OPTIMIZACIONES-POR-IMPLEMENTAR.md  __ALINEACION-ESTRATEGICA.md  __PROTOCOLO-DE-CONSOLIDACION-Y-EXPANSION.md  _checklist-despliegue.md  _cookies-extractor-extension-chrome.md  _prompt-system-inicio-hidratacion.md  arquitectura-prospector-btc.md  blueprint-prospector-btc.md  checklist-despliegue-render.md  checklist-despliegue-vercel.md  consulta-bitcojns-sql.md  convenciones-prospector.md  directivas-atomizacion-y-cero-regresiones.md  manifiesto-de-pruebas.md  proyecto-profesional.md  soberania-identidad.md  todo.md  turso-tutorial-y-uso.md  wallets-prueba-inyectadas-census.md
.documents/architecture/: bigint_bridge.md  identity_refresh_pipeline.md  lib_bin_decoupling.md  observability_and_ban_shield.md  orchestrator_module_map_v2.md  telemetry_strata_v45.md
.documents/infra/: c2_autonomous_feedback.md
.documents/services/: galvanic_relay_v200.md
.github/workflows/: asset-compiler.yml  component-load-test.yml  db-migrate-cloud.yml  forensic-grid.yml  infra-validation.yml  mathematic-test-switch.yml  miner-release.yml  node-provisioning.yml  proving-grounds.yml  (+6 more)
.prompts/: refactorizaciones.md  revision-trazas-bugs.md
apps/census-taker/: Cargo.toml  project.json
apps/census-taker/src/: forensic_generator.rs  lib.rs  main.rs  partitioner.rs  pipeline.rs
apps/miner-worker/: Cargo.toml  project.json
apps/miner-worker/src/: cpu_manager.rs  engine.rs  lib.rs  main.rs
apps/orchestrator/: Cargo.toml  Dockerfile
apps/orchestrator/src/: bootstrap.rs  bootstrap_forensics.rs  kernel.rs  lib.rs  main.rs  middleware.rs  routes.rs
apps/orchestrator/src/graphql/: academy.rs  mod.rs
apps/orchestrator/src/handlers/: admin.rs  assets.rs  billing.rs  gamification.rs  graphql.rs  lab.rs  mod.rs  notification.rs  stream.rs  swarm.rs  telemetry.rs  visual.rs
apps/orchestrator/src/services/: binary_packer.rs  c2_coordinator.rs  certification_authority.rs  chronos.rs  chronos_archive.rs  command_router.rs  event_bus.rs  finding_flusher.rs  flush.rs  identity_guard.rs  mission_hydrator.rs  mod.rs  outbox_relay.rs  parity_auditor.rs  reaper.rs  swarm_resurrection.rs
apps/orchestrator/src/state/: finding_vault.rs  mission_control.rs  mod.rs  operational_nexus.rs  swarm_telemetry.rs
apps/prover/: Cargo.toml  project.json
apps/prover/src/: forge.rs  main.rs
libs/core/client-vault-rs/: Cargo.toml  project.json
libs/core/client-vault-rs/src/: lib.rs
libs/core/generators/: Cargo.toml
libs/core/generators/src/: address_legacy.rs  errors.rs  lib.rs  satoshi_xp_synthetic.rs  wif.rs
libs/core/math-engine/: Cargo.toml
libs/core/math-engine/benches/: secp256k1_bench.rs
libs/core/math-engine/src/: arithmetic.rs  context.rs  curve.rs  curve_geometry_audit.rs  curve_simd.rs  errors.rs  field.rs  field_simd.rs  field_strata_audit.rs  generator_table.rs  hashing.rs  kangaroo.rs  lib.rs  point.rs  private_key.rs  public_key.rs  scalar.rs  secp256k1.rs  silicon_isomorphism_audit.rs
libs/core/probabilistic/: Cargo.toml  project.json
libs/core/probabilistic/src/: errors.rs  filter_wrapper.rs  lib.rs  sharded.rs
libs/domain/ai-cortex/: Cargo.toml  project.json
libs/domain/ai-cortex/src/: decision_engine.rs  errors.rs  lib.rs  optimization_controller.rs  telemetry_observer.rs
libs/domain/billing/: Cargo.toml  project.json
libs/domain/billing/src/: lib.rs
libs/domain/forensics/: Cargo.toml
libs/domain/forensics/src/: android_rng.rs  debian_rng.rs  lib.rs  luno_rng.rs
libs/domain/gamification/: Cargo.toml  project.json
libs/domain/gamification/src/: lib.rs
libs/domain/mining-strategy/: Cargo.toml  project.json
libs/domain/mining-strategy/src/: brainwallet.rs  combinatoric.rs  dictionary.rs  engines.rs  executor.rs  forensic_auditor.rs  kangaroo.rs  lib.rs
libs/domain/mining-strategy/src/engines/: android_lcg_engine.rs  dictionary_engine.rs  forensic_auditor.rs  forensic_engine.rs  satoshi_xp_engine.rs  sequential_engine.rs
libs/domain/models-rs/: Cargo.toml  project.json
libs/domain/models-rs/src/: academy.rs  finding.rs  identity.rs  lab.rs  lib.rs  scenario.rs  stratum.rs  telemetry.rs  tests_serialization.rs  work.rs  worker.rs
libs/domain/notification/: Cargo.toml  project.json
libs/domain/notification/src/: lib.rs
libs/domain/social/: Cargo.toml  project.json
libs/domain/social/src/: lib.rs
libs/infra/blockchain-client/: Cargo.toml  project.json
libs/infra/blockchain-client/src/: lib.rs
libs/infra/db-turso/: Cargo.toml  project.json
libs/infra/db-turso/src/: client.rs  errors.rs  lib.rs  schema.rs
libs/infra/db-turso/src/repositories/: affiliate_repository.rs  archival.rs  audit_repository.rs  billing.rs  finding.rs  gamification.rs  mission_repository.rs  mod.rs  notification.rs  scenario_assets.rs  scenario_repository.rs  scenarios.rs  system_repository.rs  worker.rs
libs/infra/db-turso/src/repositories/identity/: mod.rs  queries.rs
libs/infra/db-turso/src/repositories/job/: math.rs  mod.rs  queries.rs
libs/infra/transport/: Cargo.toml  project.json
libs/infra/transport/src/: lib.rs
libs/infra/worker-client/: Cargo.toml  project.json
libs/infra/worker-client/src/: client.rs  errors.rs  hydrator.rs  lib.rs
libs/shared/heimdall/: Cargo.toml
libs/shared/heimdall/src/: lib.rs
scripts/: build_miner_static.ps1  build_miner_static.sh  entrypoint.sh  generate_wallets.js
tests/: tsconfig.json
tools/: census-query.sql
(+601 files in other folders)
