# [Cargo.toml]
[workspace]
resolver = "2"

# =================================================================
# APARATO: SOVEREIGN RUST WORKSPACE (V25.0 - DEPS STABILIZED)
# CLASIFICACIÓN: ESTRATO L0 - NÚCLEO DE CONFIGURACIÓN
# RESPONSABILIDAD: AUTORIDAD CENTRAL DE VERSIONES Y HERENCIA TOTAL
# =================================================================

members = [
    "apps/census-taker",
    "apps/miner-worker",
    "apps/orchestrator",
    "apps/prover",
    "libs/core/math-engine",
    "libs/core/generators",
    "libs/core/probabilistic",
    "libs/core/client-vault-rs",
    "libs/domain/models-rs",
    "libs/domain/mining-strategy",
    "libs/domain/forensics",
    "libs/infra/db-turso",
    "libs/infra/transport",
    "libs/infra/worker-client",
    "libs/infra/blockchain-client",
    "libs/shared/heimdall"
]

exclude = [
    "apps/web-dashboard",
    "libs/core/client-vault",
    "libs/domain/api-contracts",
    "libs/features/telemetry-ui",
    "libs/infra/api-client-ts",
    "libs/infra/supabase",
    "libs/shared/heimdall-ts",
    "node_modules",
    "target",
    "dist"
]

[workspace.dependencies]
# --- 1. APARATOS INTERNOS (SSoT del Monorepo) ---
prospector-core-math = { path = "libs/core/math-engine" }
prospector-core-gen = { path = "libs/core/generators" }
prospector-core-probabilistic = { path = "libs/core/probabilistic" }
prospector-core-client-vault = { path = "libs/core/client-vault-rs" }
prospector-domain-models = { path = "libs/domain/models-rs" }
prospector-domain-strategy = { path = "libs/domain/mining-strategy" }
prospector-domain-forensics = { path = "libs/domain/forensics" }
prospector-infra-db = { path = "libs/infra/db-turso" }
prospector-infra-transport = { path = "libs/infra/transport" }
prospector-infra-worker-client = { path = "libs/infra/worker-client" }
prospector-blockchain-client = { path = "libs/infra/blockchain-client" }
prospector-shared-heimdall = { path = "libs/shared/heimdall" }

# --- 2. ASYNC RUNTIME & NETWORKING ZENITH ---
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# --- 3. PERSISTENCIA TÁCTICA (MOTOR A) ---
# ✅ FIX: Versión 0.3.1 es la estable compatible. 0.29 no existe.
libsql = { version = "0.3.5", features = ["serde"] }

# --- 4. WEB PROTOCOLS (WebSockets & GraphQL) ---
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit", "compression-full"] }
async-graphql = { version = "7.1", features = ["chrono", "uuid"] }
async-graphql-axum = "7.1"

# --- 5. CLI & INTERFAZ DE USUARIO ---
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.4"
indicatif = "0.17"
ctrlc = "3.5"

# --- 6. SERIALIZACIÓN & TRATAMIENTO DE DATOS ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.3"
byteorder = "1.5"
# ✅ Inyección necesaria para models-rs
typeshare = "1.0"

# --- 7. NÚCLEO CRIPTOGRÁFICO ---
secp256k1 = { version = "0.28", features = ["recovery", "rand", "global-context"] }
sha2 = "0.10"
sha1 = "0.10"
ripemd = "0.1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
bs58 = { version = "0.5", features = ["check"] }
# ✅ Inyecciones necesarias para probabilistic
bloomfilter = "1.0.16"
siphasher = "0.3"

# --- 8. OBSERVABILIDAD & RESILIENCIA ---
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"

# --- 9. HARDWARE & UTILIDADES ---
rayon = "1.11"
num_cpus = "1.17"
core_affinity = "0.8"
rand = "0.8"
memmap2 = "0.9"
# ✅ Inyección necesaria para math-engine
once_cell = "1.21"

# --- 10. MATRIZ DE PRUEBAS (QA) ---
proptest = "1.9"
criterion = "0.5"
tempfile = "3.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
