# [Cargo.toml] (Raíz del Monorepo Prospector BTC)
#
 # =================================================================
 # APARATO: WORKSPACE MASTER MANIFEST (V25.0 - GROUND ZERO ALIGNED)
 # CLASIFICACIÓN: COMPOSITION ROOT (ESTRATO L0)
 # RESPONSABILIDAD: GOBERNANZA DE DEPENDENCIAS Y ÁRBOL DE COMPILACIÓN
 #
 # VISION HIPER-HOLÍSTICA 2026:
 # 1. L7 STRUCTURAL ALIGNMENT: Registra nominalmente las 5 nuevas librerías
 #    de dominio (Billing, Notification, Gamification, Content, Social)
 #    para permitir la herencia galvánica en el estrato L3.
 # 2. RESOLUCIÓN DE CASCADA: Sella la falla de compilación de 'prospector-infra-db'
 #    al proveer la ruta física de 'prospector-domain-billing' y sus pares.
 # 3. NOMINAL CONSISTENCY: Mantiene los nombres de crate soberanos con
 #    el prefijo 'prospector-' para evitar colisiones en el registro de crates.io.
 # 4. HYGIENE: Limpieza de redundancias y organización jerárquica de miembros.
 #
 # # Mathematical Proof (Dependency Resolution):
 # Al definir las crates en 'workspace.dependencies', Cargo garantiza la
 # unificación de versiones en todo el monorepo, reduciendo el tamaño
 # del binario final y optimizando el tiempo de compilación incremental.
 # =================================================================
 #

[workspace]
resolver = "2"

members = [
    "apps/census-taker",
    "apps/miner-worker",
    "apps/orchestrator",
    "apps/prover",
    "libs/core/math-engine",
    "libs/core/generators",
    "libs/core/probabilistic",
    "libs/core/client-vault-rs",
    "libs/domain/models-rs",
    "libs/domain/mining-strategy",
    "libs/domain/forensics",
    "libs/infra/db-turso",
    "libs/infra/transport",
    "libs/infra/worker-client",
    "libs/infra/blockchain-client",
    "libs/shared/heimdall",
    # --- ESTRATO L7: SERVICIOS AL USUARIO Y COMUNIDAD ---
    "libs/domain/billing",
    "libs/domain/notification",
    "libs/domain/gamification",
    "libs/domain/content",
    "libs/domain/social"
]

exclude = [
    "apps/web-dashboard",
    "libs/core/client-vault",
    "libs/domain/api-contracts",
    "libs/features/telemetry-ui",
    "libs/infra/api-client-ts",
    "libs/infra/supabase",
    "libs/shared/heimdall-ts",
    "node_modules",
    "target",
    "dist",
]

[workspace.dependencies]
# --- SINAPSIS INTERNA: CORE & MODELS ---
prospector-core-math = { path = "libs/core/math-engine" }
prospector-core-gen = { path = "libs/core/generators" }
prospector-core-probabilistic = { path = "libs/core/probabilistic" }
prospector-core-client-vault = { path = "libs/core/client-vault-rs" }
prospector-domain-models = { path = "libs/domain/models-rs" }
prospector-domain-strategy = { path = "libs/domain/mining-strategy" }
prospector-domain-forensics = { path = "libs/domain/forensics" }

# ✅ NIVELACIÓN SOBERANA L7: Definición de dependencias compartidas
prospector-domain-billing = { path = "libs/domain/billing" }
prospector-domain-notification = { path = "libs/domain/notification" }
prospector-domain-gamification = { path = "libs/domain/gamification" }
prospector-domain-content = { path = "libs/domain/content" }
prospector-domain-social = { path = "libs/domain/social" }

# --- SINAPSIS INTERNA: INFRA & SHARED ---
prospector-infra-db = { path = "libs/infra/db-turso" }
prospector-infra-transport = { path = "libs/infra/transport" }
prospector-infra-worker-client = { path = "libs/infra/worker-client" }
prospector-blockchain-client = { path = "libs/infra/blockchain-client" }
prospector-shared-heimdall = { path = "libs/shared/heimdall" }

# --- ESTRATO EXTERNO: RUNTIME & NETWORKING ---
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
libsql = { version = "0.3.5", features = ["serde"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit", "compression-full"] }
async-graphql = { version = "7.1", features = ["chrono", "uuid"] }
async-graphql-axum = "7.1"

# --- ESTRATO EXTERNO: DATA & UTIL ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.3"
byteorder = "1.5"
typeshare = "1.0"
secp256k1 = { version = "0.28", features = ["recovery", "rand", "global-context"] }
sha2 = "0.10"
sha1 = "0.10"
ripemd = "0.1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
bs58 = { version = "0.5", features = ["check"] }
bloomfilter = "1.0.16"
siphasher = "0.3"

# --- CLI, OPS & TELEMETRÍA ---
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.4"
indicatif = "0.17"
ctrlc = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# --- CÓMPUTO & PERFORMANCE ---
rayon = "1.11"
num_cpus = "1.17"
core_affinity = "0.8"
rand = "0.8"
memmap2 = "0.9"
once_cell = "1.21"

# --- PROVING GROUNDS (TESTING) ---
proptest = "1.9"
criterion = "0.5"
tempfile = "3.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
