# [apps/orchestrator/Cargo.toml]
[package]
name = "prospector-orchestrator"
version = "0.4.2" # Incremento por saneamiento estructural
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Centro de mando y control (C2) soberano: Orquestación bi-direccional, oráculo GraphQL y gestión de estados tácticos con servicios L7."
license = "MIT"

[dependencies]
# --- 1. SINAPSIS INTERNA SOBERANA (SSoT del Workspace) ---
prospector-core-math = { workspace = true }
prospector-core-gen = { workspace = true }
prospector-core-probabilistic = { workspace = true }
prospector-core-client-vault = { workspace = true }

# Modelos y Estrategia
prospector-domain-models = { workspace = true }
prospector-domain-strategy = { workspace = true }
prospector-domain-forensics = { workspace = true }

# Nivelación L7: Servicios al usuario
prospector-domain-billing = { workspace = true }
prospector-domain-gamification = { workspace = true }
prospector-domain-notification = { workspace = true }
prospector-domain-social = { workspace = true }
prospector-domain-content = { workspace = true }

# Infraestructura y Shared
prospector-infra-db = { workspace = true }
prospector-shared-heimdall = { workspace = true }

# --- 2. MOTOR ASÍNCRONO Y RED ZENITH (WebSockets & HTTP) ---
axum = { workspace = true, features = ["ws", "macros"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util", "limit", "buffer"] }
tower-http = { workspace = true, features = ["cors", "trace", "fs", "limit", "compression-full"] }
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { workspace = true }
libsql = { workspace = true }

# --- 3. EL ORÁCULO (Data Gateway GraphQL) ---
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# --- 4. SERIALIZACIÓN, TRATAMIENTO DE DATOS Y CRIPTO ---
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = "1.3"
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

# --- 5. OBSERVABILIDAD Y HARDWARE ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
num_cpus = { workspace = true }

[lib]
name = "prospector_orchestrator"
path = "src/lib.rs"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN INTEGRAL (PROTOCOL TRINITY)
# =================================================================
# Matriz optimizada: Eliminación de colisiones de targets de build.

# --- ESTRATO TÁCTICO & HANDLERS ---

[[test]]
name = "finding_ingestion_test"
path = "../../tests/mirror/integration/finding_ingestion_test.rs"

[[test]]
name = "swarm_telemetry_test"
path = "../../tests/mirror/apps/orchestrator/state/swarm_telemetry.test.rs"

[[test]]
name = "identity_refresh_test"
path = "../../tests/mirror/integration/identity_refresh_test.rs"

[[test]]
name = "assignment_persistence_test"
path = "../../tests/mirror/apps/orchestrator/handlers/assignment_persistence.test.rs"

[[test]]
name = "telemetry_ingest_test"
path = "../../tests/mirror/apps/orchestrator/handlers/telemetry_ingest.test.rs"

[[test]]
name = "admin_integrity_test"
path = "../../tests/mirror/apps/orchestrator/handlers/admin_integrity.test.rs"

[[test]]
name = "governance_api_test"
path = "../../tests/mirror/apps/orchestrator/handlers/governance_api.test.rs"

[[test]]
name = "api_tests_legacy"
path = "src/api_tests.rs"

# --- ESTRATO DE SERVICIOS & RESILIENCIA ---

[[test]]
name = "outbox_relay_test"
path = "../../tests/mirror/apps/orchestrator/services/outbox_relay.test.rs"

[[test]]
name = "bootstrap_integrity_test"
path = "../../tests/mirror/apps/orchestrator/bootstrap_integrity.test.rs"

[[test]]
name = "binary_packer_test"
path = "../../tests/mirror/apps/orchestrator/services/binary_packer_v70.test.rs"

[[test]]
name = "c2_coordinator_test"
path = "../../tests/mirror/apps/orchestrator/services/c2_coordinator_test.rs"

[[test]]
name = "event_bus_zenith_test"
path = "../../tests/mirror/apps/orchestrator/services/event_bus_zenith.test.rs"

# --- ESTRATO DE ESTADO & NEURAL LINK ---

[[test]]
name = "ring_buffer_integrity"
path = "../../tests/mirror/apps/orchestrator/state/ring_buffer_integrity.test.rs"

[[test]]
name = "operational_nexus_reactivity"
path = "../../tests/mirror/apps/orchestrator/state/operational_nexus_v190.test.rs"

[[test]]
name = "websocket_stream_test"
path = "../../tests/mirror/apps/orchestrator/handlers/websocket_stream.test.rs"

[[test]]
name = "neural_socket_v210"
path = "../../tests/mirror/apps/orchestrator/handlers/neural_socket_v210.test.rs"

# --- ESTRATO DE ORÁCULO & ACADEMIA ---

[[test]]
name = "graphql_endpoint_test"
path = "../../tests/mirror/apps/orchestrator/handlers/graphql_endpoint.test.rs"

[[test]]
name = "graphql_routing_test"
path = "../../tests/mirror/apps/orchestrator/routes/graphql_routing.test.rs"

[[test]]
name = "graphql_v2_1"
path = "../../tests/mirror/apps/orchestrator/graphql/gateway_v2_1.test.rs"

[[test]]
name = "academy_dynamic_v2"
path = "../../tests/mirror/apps/orchestrator/graphql/academy_dynamic_v2.test.rs"

[[test]]
name = "root_resolution_test"
path = "../../tests/mirror/apps/orchestrator/graphql/root_resolution.test.rs"

# --- ESTRATO ESTRUCTURAL ---

[[test]]
name = "lib_structure_test"
path = "../../tests/mirror/apps/orchestrator/lib_structure.test.rs"

[[test]]
name = "route_dispatch_test"
path = "../../tests/mirror/apps/orchestrator/route_dispatch.test.rs"

# ✅ RESOLUCIÓN DE REGRESIÓN: Única definición para el test de resurrección
[[test]]
name = "resurrection_v180_test"
path = "../../tests/mirror/apps/orchestrator/services/resurrection_v180.test.rs"
