# [libs/core/math-engine/Cargo.toml]
[package]
name = "prospector-core-math"
version = "0.3.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Motor matemático de bajo nivel para secp256k1 con soporte de telemetría forense y ráfagas Jacobiana."

[dependencies]
secp256k1 = { workspace = true }
sha2 = { workspace = true }
ripemd = "0.1"
serde = { workspace = true }
tracing = { workspace = true }

[dependencies.prospector-core-math-derive]
path = "derive"
optional = true

[dev-dependencies]
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json = { workspace = true }
chrono = { workspace = true }

[lib]
name = "prospector_core_math"
path = "src/lib.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN MATEMÁTICA (V25.7 - PHYSICAL SYNC)
# =================================================================

[[test]]
name = "field_documented_integrity"
path = "../../../tests/mirror/libs/core/math_engine/field_documented_integrity.test.rs"

[[test]]
name = "field_integrity_torture"
path = "../../../tests/mirror/libs/core/math_engine/field_integrity_torture.test.rs"

[[test]]
name = "field_integrity_v150"
path = "../../../tests/mirror/libs/core/math_engine/field_integrity_v150.test.rs"

[[test]]
name = "field_simd_isomorphism"
path = "../../../tests/mirror/libs/core/math_engine/field_simd_isomorphism.test.rs"

[[test]]
name = "arithmetic_integrity"
path = "../../../tests/mirror/libs/core/math_engine/arithmetic_integrity.test.rs"

[[test]]
name = "arithmetic_sovereignty"
path = "../../../tests/mirror/libs/core/math_engine/arithmetic_sovereignty.test.rs"

[[test]]
name = "secp256k1_integrity"
path = "../../../tests/mirror/libs/core/math_engine/secp256k1_integrity.test.rs"

[[test]]
name = "secp256k1_integrity_v22"
path = "../../../tests/mirror/libs/core/math_engine/secp256k1_integrity_v22.test.rs"

[[test]]
name = "curve_laws"
path = "../../../tests/mirror/libs/core/math_engine/curve_laws.test.rs"

[[test]]
name = "public_key_integrity"
path = "../../../tests/mirror/libs/core/math_engine/public_key_integrity.test.rs"

[[test]]
name = "point_jacobian_integrity"
path = "../../../tests/mirror/libs/core/math_engine/point_jacobian_integrity.test.rs"

[[test]]
name = "point_interface"
path = "../../../tests/mirror/libs/core/math_engine/point_interface.test.rs"

[[test]]
name = "scalar_integrity"
path = "../../../tests/mirror/libs/core/math_engine/scalar_integrity.test.rs"

[[test]]
name = "scalar_modular_logic"
path = "../../../tests/mirror/libs/core/math_engine/scalar_modular_logic.test.rs"

[[test]]
name = "curve_simd_parity"
path = "../../../tests/mirror/libs/core/math_engine/curve_simd_parity.test.rs"

[[test]]
name = "generator_table_integrity"
path = "../../../tests/mirror/libs/core/math_engine/generator_table_integrity.test.rs"

[[test]]
name = "kangaroo_integrity"
path = "../../../tests/mirror/libs/core/math_engine/kangaroo_integrity.test.rs"

[[test]]
name = "hub_coherence"
path = "../../../tests/mirror/libs/core/math_engine/hub_coherence.test.rs"

[[test]]
name = "prelude_sync"
path = "../../../tests/mirror/libs/core/math_engine/prelude_sync.test.rs"

[[bench]]
name = "secp256k1_bench"
harness = false
