[package]
name = "prospector-core-math"
version = "0.3.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Motor matemático de bajo nivel para secp256k1 con soporte de telemetría forense y ráfagas Jacobiana."

[dependencies]
secp256k1 = { workspace = true }
sha2 = { workspace = true }
ripemd = "0.1"
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json = { workspace = true }
chrono = { workspace = true }

[lib]
name = "prospector_core_math"
path = "src/lib.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN MATEMÁTICA (V17.0 - SOBERANA)
# =================================================================

[[test]]
name = "arithmetic_kernel_audit"
path = "../../../tests/mirror/libs/core/math_engine/arithmetic_kernel_audit.rs"

[[test]]
name = "field_strata_audit"
path = "../../../tests/mirror/libs/core/math_engine/field_strata_audit.rs"

[[test]]
name = "curve_geometry_audit"
path = "../../../tests/mirror/libs/core/math_engine/curve_geometry_audit.rs"

[[test]]
name = "scalar_modular_audit"
path = "../../../tests/mirror/libs/core/math_engine/scalar_modular_audit.rs"

[[test]]
name = "silicon_isomorphism_audit"
path = "../../../tests/mirror/libs/core/math_engine/silicon_isomorphism_audit.rs"

[[test]]
name = "generator_lut_audit"
path = "../../../tests/mirror/libs/core/math_engine/generator_lut_audit.rs"

[[test]]
name = "kangaroo_solver_audit"
path = "../../../tests/mirror/libs/core/math_engine/kangaroo_solver_audit.rs"

[[test]]
name = "prelude_registry_audit"
path = "../../../tests/mirror/libs/core/math_engine/prelude_registry_audit.rs"

[[bench]]
name = "secp256k1_bench"
harness = false