[package]
name = "prospector-core-math"
version = "0.3.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Motor matemático de bajo nivel para secp256k1 con soporte de telemetría forense y ráfagas Jacobiana."

[dependencies]
secp256k1 = { workspace = true }
sha2 = { workspace = true }
ripemd = "0.1"
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json = { workspace = true }
chrono = { workspace = true }

[lib]
name = "prospector_core_math"
path = "src/lib.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN MATEMÁTICA (V17.0 - GOLD MASTER)
# =================================================================
# Sincronizada bit-a-bit con los archivos del Proving Grounds.

# 1. Auditoría de Aritmética U256 (ADX/ASM & Acarreos)
[[test]]
name = "arithmetic_integrity"
path = "../../../tests/mirror/libs/core/math_engine/arithmetic_integrity.test.rs"

# 2. Auditoría de Campo Finito Fp (Montgomery & Tortura Isomórfica)
[[test]]
name = "field_integrity_torture"
path = "../../../tests/mirror/libs/core/math_engine/field_integrity_torture.test.rs"

# 3. Auditoría de Geometría de Curva (Leyes de Grupo SEC1)
[[test]]
name = "secp256k1_integrity"
path = "../../../tests/mirror/libs/core/math_engine/secp256k1_integrity.test.rs"

# 4. Auditoría de Aritmética Escalar (Modulo n)
[[test]]
name = "scalar_integrity"
path = "../../../tests/mirror/libs/core/math_engine/scalar_integrity.test.rs"

# 5. Auditoría de Isomorfismo SIMD (Campo Finito 4-Way)
[[test]]
name = "field_simd_isomorphism"
path = "../../../tests/mirror/libs/core/math_engine/field_simd_isomorphism.test.rs"

# 6. Auditoría de Paridad SIMD (Leyes de Curva Parallel)
[[test]]
name = "curve_simd_parity"
path = "../../../tests/mirror/libs/core/math_engine/curve_simd_parity.test.rs"

# 7. Auditoría de Tabla de Pre-cómputo (Static LUT)
[[test]]
name = "generator_table_integrity"
path = "../../../tests/mirror/libs/core/math_engine/generator_table_integrity.test.rs"

# 8. Auditoría de Resolutor ECDLP (Canguros de Pollard)
[[test]]
name = "kangaroo_integrity"
path = "../../../tests/mirror/libs/core/math_engine/kangaroo_integrity.test.rs"

[[bench]]
name = "secp256k1_bench"
harness = false